--- a/public/shop.html
+++ b/public/shop.html
@@ -1310,7 +1310,7 @@
         <i class="fa-solid fa-chevron-left"></i> <span id="nav-title">Назад</span>
     </a>
         
-        <div class="balance-display" onclick="refreshBalance()">
+       <div class="balance-display" onclick="checkBalance(true)">
             <span id="user-balance">...</span> 
             <i class="fa-solid fa-coins"></i>
             <i class="fa-solid fa-rotate refresh-icon" id="refresh-icon" style="margin-left: 6px;"></i>
