--- a/public/admin.html
+++ b/public/admin.html
@@ -75,6 +75,13 @@
                         <div class="icon-wrapper"><i class="fa-solid fa-list-check"></i></div>
                         <span>Задания</span>
                     </div>
+                  
+                  <a href="/admin_challenges.html" class="admin-icon-button">
+                <div class="icon-wrapper" style="color: #0088cc; border-color: rgba(0, 136, 204, 0.3);">
+                    <i class="fa-solid fa-layer-group"></i>
+                        </div>
+                        <span>ТГ Испытания</span>
+                    </a>                  
                     <div class="admin-icon-button" data-view="view-admin-challenges">
                         <div class="icon-wrapper"><i class="fa-solid fa-trophy"></i></div>
                         <span>Челленджи</span>
