--- a/public/raffles.html
+++ b/public/raffles.html
@@ -457,7 +457,7 @@
                 let conditions = '';
                 if (!done) {
                     if (s.requires_telegram_sub) conditions += `<div class="cond-row"><i class="fa-brands fa-telegram"></i> Канал</div>`;
-                    if (s.min_daily_messages > 0) conditions += `<div class="cond-row"><i class="fa-brands fa-twitch"></i> Сообщений: ${s.min_daily_messages}</div>`;
+                    if (s.min_daily_messages > 0) conditions += `<div class="cond-row"><i class="fa-brands fa-twitch"></i> Сообщений за стрим: ${s.min_daily_messages}</div>`;
                 }
 
                 let btnLabel = "УЧАСТВОВАТЬ";
