--- a/public/raffles.html
+++ b/public/raffles.html
@@ -438,15 +438,16 @@
             list.innerHTML = ''; historyList.innerHTML = '';
             
             let completedCount = 0;
-
-            if (!data.length) { 
-                list.innerHTML = '<div style="text-align:center; margin-top:50px; color:var(--text-muted);">Активных розыгрышей нет 👻</div>'; 
-            }
+            let activeRendered = 0;
 
             data.forEach(r => {
+                // 🔥 ВАЖНО: Скрываем отложенные посты (scheduled)
+                if (r.status === 'scheduled') return;
+
                 const s = r.settings || {};
                 const done = r.status === 'completed';
                 if(done) completedCount++;
+                else activeRendered++;
                 
                 // Проверка на отмену (завершен, но нет победителя)
                 const isCancelled = done && !r.winner;
@@ -526,6 +527,10 @@
                 if (done) historyList.innerHTML += cardHtml;
                 else list.innerHTML += cardHtml;
             });
+
+            if (activeRendered === 0) { 
+                list.innerHTML = '<div style="text-align:center; margin-top:50px; color:var(--text-muted);">Активных розыгрышей нет 👻</div>'; 
+            }
 
             document.getElementById('total-count').innerText = `Разыграно: ${completedCount}`;
             list.innerHTML += '<div class="bottom-spacer"></div>';
