--- a/public/menu.html
+++ b/public/menu.html
@@ -431,6 +431,6 @@
     </div>
 </div>
 
-  <script src="/public/menu.js?v=4.0"></script>
+  <script src="/public/menu.js?v=5.5_vk_final"></script>
 </body>
 </html>
