--- a/public/admin.html
+++ b/public/admin.html
@@ -65,6 +65,12 @@
                         </div>
                         <span>TRADE KEYS P2P</span>
                     </div>
+                  <a href="/cs_roulette.html" class="admin-icon-button">
+                        <div class="icon-wrapper" style="color: #ff9800;">
+                            <i class="fa-solid fa-user-secret"></i>
+                        </div>
+                        <span>Секретка меню</span>
+                    </a>
                     <div class="admin-icon-button" data-view="view-admin-promocodes">
                         <div class="icon-wrapper"><i class="fa-solid fa-ticket"></i></div>
                         <span>Промокоды</span>
