--- a/public/shop.html
+++ b/public/shop.html
@@ -1360,6 +1360,16 @@
         
         @keyframes float { 0%,100%{transform:translateY(0)} 50%{transform:translateY(-15px)} }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+
+        /* --- ДОБАВИТЬ ЭТОТ КЛАСС --- */
+        .item-image.case-zoom {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border-radius: 12px; /* Можно убрать скругление снизу, если хочешь: 12px 12px 0 0 */
+        }
+        
     </style>
 </head>
 <body>
@@ -2342,8 +2352,7 @@ function preloadP2PState() {
                 el.innerHTML = `
                     <div class="item-image-wrapper" onclick="${clickAction}">
                         <img src="${imgUrl}" 
-                             class="item-image" 
-                             decoding="async" 
+                             class="item-image ${isCase ? 'case-zoom' : ''}"  decoding="async" 
                              loading="lazy" 
                              onload="this.classList.add('loaded')" 
                              alt="${escapeHtml(item.name)}">
