--- a/public/profile.html
+++ b/public/profile.html
@@ -655,8 +655,8 @@
 
             <div class="dash-btn" id="btn-open-inventory">
     <i class="fa-solid fa-box-open" style="color: #007aff;"></i>
-    <div class="title">Мои Скины</div>
-    <div class="info">Инвентарь и вывод</div>
+    <div class="title">Инвентарь</div>
+    <div class="info">Скины с рулеток и т.п</div>
     <div class="info" id="inventory-btn-info">Загрузка...</div>
 </div>
         </div>
