--- a/public/shop.html
+++ b/public/shop.html
@@ -2941,7 +2941,7 @@ function showShopModal({ title, subtitle, confirmText, confirmClass, onConfirm }
     overlay.onclick = (e) => { if(e.target === overlay) close(); };
 }
 
-// --- 2. ЛОГИКА "ЗАБРАТЬ" (Желтая кнопка, API исправлен) ---
+// --- 2. ЛОГИКА "ЗАБРАТЬ" (Желтая кнопка) ---
 // --- 2. ЛОГИКА "ЗАБРАТЬ" (Желтая кнопка) ---
 async function claimItem(itemId) {
     if (!itemId) return Telegram.WebApp.showAlert("Ошибка: ID предмета не найден.");
@@ -2953,7 +2953,6 @@ async function claimItem(itemId) {
         confirmClass: "btn-yellow-modal", 
         onConfirm: async (closeModal) => {
             
-            // Включаем лоадер
             const loader = document.getElementById('purchase-loader');
             if (loader) {
                 loader.classList.add('active');
@@ -2966,26 +2965,20 @@ async function claimItem(itemId) {
                     history_id: itemId 
                 });
 
-                // Если код дошел сюда, значит 200 OK
-                // 1. СНАЧАЛА ЗАКРЫВАЕМ ВСЕ ОКНА
-                closeModal();      // Закрываем диалог подтверждения
-                closeRoulette();   // Закрываем саму рулетку
+                // 1. СНАЧАЛА СООБЩЕНИЕ (Скрипт встанет на паузу тут, пока ты не нажмешь ОК)
+                if (res) {
+                     Telegram.WebApp.showAlert(`✅ Успешно!\n\nОжидайте трейд по указанной Вами ссылке в течение 24 часов.`);
+                }
 
-                // 2. Делаем паузу 100мс, чтобы окна визуально исчезли
-                setTimeout(() => {
-                     Telegram.WebApp.showAlert(`✅ Успешно!\n\nЗаявка создана. Ожидайте трейд по указанной Вами ссылке в течение 24 часов.`);
-                }, 100);
+                // 2. ПОТОМ ЗАКРЫВАЕМ ОКНА (Когда нажал ОК)
+                closeModal();      
+                closeRoulette();   
 
             } catch (e) {
-                // Даже если ошибка (например 404), сначала закрываем окно подтверждения!
+                Telegram.WebApp.showAlert(e.message || "Ошибка соединения");
                 closeModal(); 
-                
-                // И через мгновение показываем ошибку
-                setTimeout(() => {
-                    Telegram.WebApp.showAlert(e.message || "Ошибка соединения");
-                }, 100);
             } finally {
-                // Выключаем лоадер в самом конце
+                // 3. УБИРАЕМ ЛОАДЕР
                 if (loader) loader.classList.remove('active');
             }
         }
